bug fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,8 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+body,html{
+  overflow-x: hidden;
+  overflow-y: auto;
+}
